--- a/public/houtai/css/icon.css
+++ b/public/houtai/css/icon.css
@@ -22,6 +22,13 @@
     display: inline-block;
     background: url(../img/tree.png) no-repeat 0 50%;
 }
+.t-tree-node-icon {
+    width: 16px;
+    height: 18px;
+    vertical-align: middle!important;
+    display: inline-block;
+    background: url(../img/tree.png) no-repeat 0 50%;
+}
 .v-img6 {
     background-position: -121px 1px;
 }
