--- a/public/houtai/css/style.css
+++ b/public/houtai/css/style.css
@@ -6,7 +6,7 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
 	border:0;
 	font-weight:inherit;
 	font-style:inherit;
-	font-size:100%;
+/*	font-size:100%;*/
 	font-family:inherit;
 	vertical-align:baseline;
 }
